@@ -67,6 +67,12 @@
 		<property name="codecFactory" ref="rtmpCodecFactory" />
 	</bean>
 	
+	<!-- Use injection to store RTMPT handler in servlet -->
+	<bean id="rtmptServlet"
+		class="org.red5.server.net.rtmpt.RTMPTServlet">
+		<property name="handler" ref="rtmptHandler" />
+	</bean>
+	
 	<!-- RTMPT Connection -->
 	<bean id="rtmptConnection" scope="prototype"
 		class="org.red5.server.net.rtmpt.RTMPTConnection">
